# JMU_JSON2ICS

./: READEME.md  README.md  jmu_class_schedule_to_ics.py  pyproject.toml  软件1991 - 苏粤翔.ics
